# ubuntu-advantage-desktop-daemon

./: .gitignore  README.md  autogen.sh  configure.ac  meson.build
.github/workflows/: c.yaml  test.yaml
debian/: changelog  control  copyright  rules
po/: POTFILES.in  meson.build
src/: Makefile.am  com.canonical.UbuntuAdvantage.conf  com.canonical.UbuntuAdvantage.policy.in  com.canonical.UbuntuAdvantage.service.in  com.canonical.UbuntuAdvantage.xml  main.c  meson.build  ua-authorization.c  ua-authorization.h  ua-daemon.c  ua-daemon.h  ua-service-status.c  ua-service-status.h  ua-service.c  ua-service.h  ua-status-monitor.c  ua-status-monitor.h  ua-status.c  ua-status.h  ua-tool.c  ua-tool.h  ubuntu-advantage-desktop-daemon.service.in
tests/: meson.build  mock-ua.c  test-attach-invalid-token.c  test-attach.c  test-daemon.c  test-daemon.h  test-detach.c  test-disable-service.c  test-enable-service.c  test-list-services.c
